# homework10_5

./: .gitignore  pyproject.toml  quotes_author_202304141136.csv  quotes_quote_202304141136.csv  quotes_quote_tags_202304141136.csv  quotes_tag_202304141136.csv
quotes_project/quotes_app/: forms.py  models.py  urls.py  views.py
quotes_project/quotes_app/migrations/: 0001_initial.py
quotes_project/quotes_app/static/quotes_app/: main.css
quotes_project/quotes_app/templates/quotes_app/: add_author.html  add_quote.html  author_detail.html  author_list.html  base.html  index.html  tag_list.html
quotes_project/quotes_project/: settings.py  urls.py
quotes_project/users/: forms.py  urls.py  views.py
quotes_project/users/templates/users/: login.html  logout.html  signup.html
